--- a/nptel_result_system/templates/upload_subjects.html
+++ b/nptel_result_system/templates/upload_subjects.html
@@ -1,6 +1,6 @@
 <h2>Upload Subjects</h2>
 
-<form method="POST" enctype="multipart/form-data">
+<form method="POST" action="/upload_subject" enctype="multipart/form-data" class="form-box">
     <input type="file" name="file" required>
     <br><br>
     <button class="primary-btn">Upload</button>
