Corrected excel re-upload

--- a/nptel_result_system/templates/manage_subjects.html
+++ b/nptel_result_system/templates/manage_subjects.html
@@ -54,6 +54,15 @@
 
 <button class="secondary-btn">Upload</button>
 </form>
+<br>
+
+<!-- ✅ Update NPTEL Subjects -->
+    <a href="/mark_nptel_subjects">
+        <button class="primary-btn">
+            Update NPTEL Subjects
+        </button>
+    </a>
+
 
 
 <hr>
