--- a/nptel_result_system/templates/mark_nptel_subjects.html
+++ b/nptel_result_system/templates/mark_nptel_subjects.html
@@ -34,7 +34,7 @@
             <tr>
                 <td style="text-align:center;">
                     <input type="checkbox"
-                           name="nptel_subjects"
+                           name="nptel_subjects[]"
                            value="{{ s.id }}"
                            {% if s.is_nptel == 1 %}checked{% endif %}>
                 </td>
