--- a/nptel_result_system/templates/result.html
+++ b/nptel_result_system/templates/result.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+    <input type="hidden" name="subject_id" value="{{ session.get('active_subject') }}">
+
 <div class="navbar">
     <h3>NPTEL Result System</h3>
 
