--- a/nptel_result_system/templates/manage_teachers.html
+++ b/nptel_result_system/templates/manage_teachers.html
@@ -137,16 +137,24 @@
 
 {% if is_super_admin %}
 <td>
-    <form method="POST" action="/toggle_admin/{{ t['id'] }}">
-        {% if t["is_admin"] == 1 %}
-            <button class="secondary-btn">Remove Admin</button>
-        {% else %}
-            <button class="primary-btn">Make Admin</button>
-        {% endif %}
-    </form>
+
+    {% if t["is_deactivated"] == 1 %}
+        <button class="secondary-btn" disabled>
+            Cannot Promote (Deactivated)
+        </button>
+
+    {% else %}
+        <form method="POST" action="/toggle_admin/{{ t['id'] }}">
+            {% if t["is_admin"] == 1 %}
+                <button class="secondary-btn">Remove Admin</button>
+            {% else %}
+                <button class="primary-btn">Make Admin</button>
+            {% endif %}
+        </form>
+    {% endif %}
+
 </td>
 {% endif %}
-
 <!-- ACTIONS -->
 <td>
 
